[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Bourne <simonbourne@gmail.com>"]

[workspace.dependencies]
serpent-automation-frontend = { path = "packages/frontend" }
serpent-automation-server-api = { path = "packages/server-api" }
serpent-automation-executor = { path = "packages/executor" }
serpent-automation-wasm-host = { path = "packages/wasm-host" }
serpent-automation-wasm-guest = { path = "packages/wasm-guest" }
serpent-automation-wasm-guest-proc-macro = { path = "packages/wasm-guest-proc-macro" }
silkenweb-ui5 = { path = "packages/ui5" }
silkenweb = { git = "https://github.com/silkenweb/silkenweb", features = [
    "css-transpile",
] }
silkenweb-task.git = "https://github.com/silkenweb/silkenweb"
arpy = "0.2.0"
arpy-server = "0.2.0"
arpy-axum = "0.2.0"
arpy-reqwasm = "0.2.0"
clap = "4.5.38"
futures-signals = "0.3.31"
web-sys = "0.3.60"
derive_more = "0.99.17"
gloo-console = "0.2.3"
wasm-bindgen = "0.2"
indoc = "2.0.3"
nom = "7.1.1"
nom-greedyerror = "0.5.0"
nom_locate = "4.0.0"
scopeguard = "1.1.0"
serde = "1.0.145"
strum = "0.27.1"
thiserror = "1.0.32"
tokio = "1.21.2"
tokio-stream = "0.1.14"
gloo-net = "0.1.0"
futures = "0.3.24"
once_cell = "1.17.1"
axum = "0.6.19"
slotmap = "1.0.6"
clonelet = "0.2.0"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
anyhow = "1.0.98"
wasmtime = "33.0.0"
walrus = "0.23.3"
id-arena = "2.2.1"
crossbeam = "0.8.4"
flate2 = "1.1.1"
quote = "1.0.40"
syn = "2.0.101"
inventory = "0.3.20"
proc-macro2 = "1.0.95"
trybuild = "1.0.105"
